Update footer newsletter form

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -59,7 +59,7 @@ const year = new Date().getFullYear();
         Error
       </div>
 
-      <form id="newsletter-form" class="form" data-sending={t('contact.data-sendig')} data-send={t('contact.btn')}>
+      <form id="newsletter-form" class="form" data-sending={t('contact.data-sendig')} data-send={t('footer.btn')}>
         <div class="input-container input-email">
           <input
             required
