Add new project

--- a/src/pages/[...locale]/portfolio/design/index.astro
+++ b/src/pages/[...locale]/portfolio/design/index.astro
@@ -21,6 +21,7 @@ const description = t('porfolio.design.seo.description');
 
 const ixkik = projectIxkik({ locale });
 const emNeurology = projectEmNeurology({ locale });
+const helloAPI = projectHelloAPI({ locale });
 
 export { getStaticPaths };
 ---
@@ -51,6 +52,16 @@ export { getStaticPaths };
 
     <div class="content">
       <ul class="projects-cards">
+        <li>
+          <ProjectCard
+            imageSrc={helloAPI.imageSrc}
+            name={helloAPI.name}
+            summary={helloAPI.summary}
+            year={helloAPI.year}
+            client={helloAPI.client}
+            projectUrl={helloAPI.projectUrl}
+            videoUrl={helloAPI.videoUrl} />
+        </li>
         <li>
           <ProjectCard
             imageSrc={emNeurology.imageSrc}
